Dummy_Package_for_scratch_org/main/default/objects/Project__c/fields/Deployment_Flow__c.field-meta.xml
<CustomField>
    <fullName>Deployment_Flow__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>If working with Copado Change Management, the Project must be linked to a Pipeline.</inlineHelpText>
    <label>Pipeline</label>
    <referenceTo>Deployment_Flow__c</referenceTo>
    <relationshipLabel>Projects</relationshipLabel>
    <relationshipName>Projects</relationshipName>
    <type>Lookup</type>
</CustomField>