Dummy_Package_for_scratch_org/main/default/objects/Project__c/fields/Exclude_Tabs_from_Promotion_Page__c.field-meta.xml
<CustomField>
    <fullName>Exclude_Tabs_from_Promotion_Page__c</fullName>
    <label>Exclude Tabs from Promotion Page</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Static Code Analysis Summary</fullName>
            </value>
            <value>
                <fullName>Selenium Test</fullName>
            </value>
            <value>
                <fullName>Promotion User Story Metadata</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>